refactor(logging): 更新日志动作枚举和相关调用
- 将所有 CHEAT_ 前缀的日志动作更改为 AUTOBAN_CHEAT_ 前缀
- 将所有 CHR_ 前缀的角色相关日志动作更改为 CHARACTER_ 前缀
- 将所有 CS_ 前缀的商城日志动作更改为 CASH_SHOP_ 前缀
- 将所有 ACC_ 前缀的账户日志动作更改为 ACCOUNT_ 前缀
- 将 SERVER_SHUTDOWN 更改为 SYSTEM_SERVER_SHUTDOWN
- 将 ERROR 更改为 SYSTEM_ERROR
- 将 SHOP 相关日志动作更改为 ITEM_TRACEAB_ 前缀
- 将 MAP_CHANGE 更改为 FIELD_MAP_CHANGE
- 为 LogAction 和 LogModule 枚举添加国际化键值检查方法
- 更新所有相关的日志记录调用以使用新的枚举值
- 移除 MapleMap 中的旧日志记录器声明，使用 Lombok 注解替代